--- a/about.html
+++ b/about.html
@@ -33,13 +33,17 @@
                 <div class="mx-auto" style="width: 250px;">
                 <div class="card h-100" style="width: 18rem;">
                     <div class="container">
-                    <img src="seears_park2.jpg" class="image rounded-circle" alt="monument"; width="230"; height="160";>
+                    <img src="seears_park2.png" class="image rounded-circle" alt="monument"; width="230"; height="160";>
                     <div class="overlay">
                          <div class="text">plinth</div>
                         </div>
                     </div>
                       <div class="card-body">
-                      <p class="card-text">Once a cornfield, Seears Park was "bequeathed in perpetuity to the people of the borough" by Mr and Mrs John Seears, who lived nearby in Quarry Park Rise. Seears Park opened formally as a park in 1934. This plinth is made of Portland Stone and was originally topped by a drinking fountain with a statue of a boy, and bore an inscription thanking the Seears for their generous gift of the park. Over the years, the top parts disappeared or were removed, leaving only the plinth still standing.</p>
+                      <p class="card-text">Seears Park has a fascinating history. Once a cornfield, it became an integral part of Hammond's Orchard and the East Cheam Manor estate. The park boasts numerous mature ornamental trees, dating back to the 19th century. Established as a park by John Seear in 1910, Seears Park was bequeathed to the people of Cheam 'in perpetuity', with Sutton Council acting as its trustees. 
+The plinth in the south-west corner was created from Portland Stone, which was originally topped by a drinking fountain with a statue of a boy. This bore an inscription thanking the Seears for their generous gift of the park. Over the years, the top parts disappeared or were removed, leaving only the plinth still standing.
+Despite its rich heritage, the park currently lacks a resident park ranger, leading to a gap in local knowledge and historical understanding. However, this void is being actively addressed through various community initiatives like Yourspace and the Seears Park and Perretts Field Friends group. The dedication and passion of local residents, who deeply care about preserving the park's history and maintaining its present-day beauty, play a crucial role in this effort.
+Together, these collaborative endeavors strive to ensure that Seears Park continues to thrive as a cherished community space, where its captivating past intertwines with its vibrant present.
+</p>
                     </div>
                   </div>
                 </div>
@@ -56,7 +60,11 @@
                     </div>
                     </div>
                         <div class="card-body">
-                      <p class="card-text">xxxxxx</p>
+                      <p class="card-text">Quarry Cottage, nestled in Seears Park, is a hidden gem concealed by bushes and sharing an access road with the nursery space. This derelict Cottage has captivated many, drawing interest from both locals and researchers involved in the yourspacesutton project.
+Former residents, Richard and Margaret Moss, recently visited Quarry Cottage, offering valuable insights into its history. Another visitor, Ms. Cherry, daughter of Mr. Cherry, the former Head of Parks Superintendent, was thrilled to see the well-preserved nursery space, a stark contrast to her memories of a ruined landscape.
+The Mosses, who called Quarry Cottage home from 1979 to 1995, experienced firsthand the changes that have unfolded over the years. Their tenure in the Cottage was tied to their employment with the council. Regrettably, the subsequent occupants remain unknown, leaving the Cottage in a state of disrepair.
+If you have any information about the gardeners who once resided in Quarry Cottage or wish to volunteer in this area, please step forward. Preserving our local history and fostering a deep connection to our surroundings is key. Together, let us ensure the endurance of public knowledge and care for future generations.
+</p>
                     </div>
                 </div>
                 </div>
@@ -67,13 +75,16 @@
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card h-100" style="width: 18rem;">
                         <div class="container">
-                        <img src="yourspace.jpg" class="image rounded-circle" alt="YourSpace" width="230"; height="160";>
+                        <img src="yourspace.png" class="image rounded-circle" alt="YourSpace" width="230"; height="160";>
                         <div class="overlay">
                             <div class="text">amazing place</div>
                         </div>
                         </div>
                             <div class="card-body">
-                        <p class="card-text"></p>
+                        <p class="card-text">Yourspace Sutton is an exceptional project that holds a special place in the hearts of many in the local area. It serves as a welcoming community space, a delightful garden centre, and a cosy café all rolled into one. Created with genuine passion, Yourspace has flourished under the dedicated efforts of its founder, Kevin.
+This inviting space plays host to a variety of engaging activities, including art classes, gardening workshops, relaxation activities and projects for children. Kevin's tireless commitment has made Yourspace a hub of creativity, learning, and connection. If you haven't had the chance to visit, it's well worth exploring. Located at the back of Seears Park, you can easily access it through the south side access road.
+Take time to discover the tranquil ambiance and charm of Yourspace Sutton. It offers a haven where you can relax in nature, develop skills, experience the warmth of community, and expand your knowledge. Definitely not one to miss.
+</p>
                         </div>
                     </div>
                 </div>
