--- a/information.html
+++ b/information.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
   <head>
   <meta charset="UTF-8">
-  <title>Seears Park Tree-sure Trail</title>
+  <title>About the trees</title>
     <link href="style2.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
