--- a/about.html
+++ b/about.html
@@ -39,9 +39,7 @@
                         </div>
                     </div>
                       <div class="card-body">
-                      <p class="card-text">Seears Park was bequeathed to the people of Cheam 'in perpetuity' by Mr and Mrs John Seears, with Sutton Council acting as its trustees. 
-The plinth in the south-west corner of Seears Park was created from Portland Stone, which was originally topped by a drinking fountain with a statue of a boy. This bore an inscription thanking the Seears for their generous gift of the park. Over the years, the top parts disappeared or were removed, leaving only the plinth still standing.
-</p>
+                      <p class="card-text">Seears Park was bequeathed to the people of Cheam 'in perpetuity' by Mr and Mrs John Seears, with Sutton Council acting as its trustees. The Portland stone plinth in the south-west corner of Seears Park originally bore an inscription thanking the Seears for their generous gift and was topped by a drinking fountain. Today only the plinth is still standing.</p>
                     </div>
                   </div>
                 </div>
@@ -58,7 +56,7 @@ The plinth in the south-west corner of Seears Park was created from Portland Sto
                     </div>
                     </div>
                         <div class="card-body">
-                      <p class="card-text">QQuarry Cottage, nestled in Seears Park, is a hidden gem concealed by bushes and sharing an access road with the nursery space. This derelict Cottage has captivated many, drawing interest from both locals and researchers involved in the yourspacesutton project.</p>
+                      <p class="card-text">Quarry Cottage, nestled in the north-east corner of Seears Park, is a hidden gem concealed by bushes and sharing an access road with the nursery space. This derelict Cottage has captivated many, drawing interest from both locals and researchers involved in the Yourspace local history project.</p>
                     </div>
                 </div>
                 </div>
@@ -69,13 +67,13 @@ The plinth in the south-west corner of Seears Park was created from Portland Sto
                 <div class="mx-auto" style="width: 250px;">
                     <div class="card h-100" style="width: 18rem;">
                         <div class="container">
-                        <img src="yourspace.png" class="image rounded-circle" alt="YourSpace" width="230"; height="160";>
+                        <img src="Yourspace.png" class="image rounded-circle" alt="YourSpace" width="230"; height="160";>
                         <div class="overlay">
                             <div class="text">amazing place</div>
                         </div>
                         </div>
                             <div class="card-body">
-                        <p class="card-text">Yourspace Sutton is an exceptional project that holds a special place in the hearts of many in the local area. It serves as a welcoming community space, a delightful garden centre, and a cosy café all rolled into one. Created with genuine passion, its founder Kevin's tireless commitment has made Yourspace a hub of creativity, learning, and connection. Located at the back of Seears Park, you can easily access it through the south side access road.</p>
+                        <p class="card-text">Yourspace is an exceptional community project that holds a special place in the hearts of many in the local area. It serves as a welcoming community hub, delightful garden centre and pond area, and cosy café all rolled into one. Located at the back of Seears Park, you can easily access it via the south side road leading to the north-west corner of the park.</p>
                         </div>
                     </div>
                 </div>
