--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                       <div class="card-body">
-                      <p class="card-text">Seears Park was bequeathed to the people of Cheam 'in perpetuity' by Mr and Mrs John Seears, with Sutton Council acting as its trustees. The Portland stone plinth in the south-west corner of Seears Park originally bore an inscription thanking the Seears for their generous gift and was topped by a drinking fountain. Today only the plinth is still standing.</p>
+                      <p class="card-text">Seears Park was bequeathed to the people of Cheam 'in perpetuity' by Mr and Mrs John Seears, with Sutton Council acting as its trustees. The Portland stone plinth in the south-west corner of Seears Park originally bore an inscription thanking the Seears for their generous gift and was topped by a drinking fountain.</p>
                     </div>
                   </div>
                 </div>
@@ -73,7 +73,7 @@
                         </div>
                         </div>
                             <div class="card-body">
-                        <p class="card-text">Yourspace is an exceptional community project that holds a special place in the hearts of many in the local area. It serves as a welcoming community hub, delightful garden centre and pond area, and cosy café all rolled into one. Located at the back of Seears Park, you can easily access it via the south side road leading to the north-west corner of the park.</p>
+                        <p class="card-text">Yourspace is an exceptional community project that holds a special place in the hearts of many in the local area. It serves as a welcoming community hub, delightful garden centre and pond area, and cosy café all rolled into one. You can easily access it via the south side road leading to the north-west corner of the park.</p>
                         </div>
                     </div>
                 </div>
