--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                         </div>
                         </div>
                             <div class="card-body">
-                        <p class="card-text">Yourspace is an exceptional community project that holds a special place in the hearts of many in the local area. It serves as a welcoming community hub, delightful garden centre and pond area, and cosy café all rolled into one. You can easily access it via the south side road leading to the north-west corner of the park.</p>
+                        <p class="card-text">Yourspace is an exceptional community project that holds a special place in the hearts of many in the local area. It serves as a welcoming community hub, delightful gardens and pond area, and cosy café all rolled into one. You can easily access it via the south side road leading to the south-east corner of the park.</p>
                         </div>
                     </div>
                 </div>
