--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Seears Park Tree-sure Trail</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="script.js"></script>
   
 <script async defer
@@ -21,6 +22,18 @@
     <span id="score">Score: 0</span>
   </div>
 
+   <!--Grid row 1-->
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-12 mb-4 white-text text-center wow fadeIn">
+                <h1 class="display-3 font-weight-bold white-text mb-0 pt-md-5 pt-5>curate.com">Seears Park</h1>
+                <hr class="hr-light my-4 w-100 mx-auto;">
+                <h2 class="subtext-header mt-2 mb-4">follow the tree-sure trail</h2>
+            </div>
+        </div>
+  <!--Grid row-->
+
+  <!--Grid row 2-->
+  <div class="row d-flex justify-content-center">  
   <!-- Instructions content -->
   <div class="content">
     <p>To follow the Seears Park Tree-sure Trail, this is what you need to do:</p>
@@ -33,6 +46,8 @@
       <li>NOTE: If you prefer to go for a walk without scoring points or using this map, you can click on 'Tree information' at the top of this page to find out more about the trees of Seears Park.</li>
     </ol>
   </div>
+</div>
+<!--Grid row-->
   
 <!-- Main map -->
 <div id="tree_map"></div>
